--- a/.gitattributes
+++ b/.gitattributes
@@ -2,26 +2,26 @@
 * text=auto
 
 # Custom for Visual Studio
-*.cs     diff=csharp
-*.sln    merge=union
-*.csproj merge=union
-*.vbproj merge=union
-*.fsproj merge=union
-*.dbproj merge=union
-*.xml    merge=astextplain
-*.proj   merge=astextplain
-*.ps1    merge=astextplain
-*.psd1    merge=astextplain
-*.psm1    merge=astextplain
+*.cs	 diff=csharp
+*.sln	 diff=xml	merge=union
+*.csproj diff=xml	merge=union
+*.vbproj diff=xml	merge=union
+*.fsproj diff=xml	merge=union
+*.dbproj diff=xml	merge=union
+*.xml	 diff=xml	merge=astextplain
+*.proj	 merge=astextplain
+*.ps1	 merge=astextplain
+*.psd1	 merge=astextplain
+*.psm1	 merge=astextplain
 
 # Standard to msysgit
 *.doc	 diff=astextplain
 *.DOC	 diff=astextplain
-*.docx diff=astextplain
-*.DOCX diff=astextplain
-*.dot  diff=astextplain
-*.DOT  diff=astextplain
-*.pdf  diff=astextplain
+*.docx 	 diff=astextplain
+*.DOCX 	 diff=astextplain
+*.dot  	 diff=astextplain
+*.DOT  	 diff=astextplain
+*.pdf  	 diff=astextplain
 *.PDF	 diff=astextplain
 *.rtf	 diff=astextplain
 *.RTF	 diff=astextplain
