--- a/Source/Package.nuspec
+++ b/Source/Package.nuspec
@@ -2,13 +2,14 @@
 <package >
   <metadata>
     <id>MSBuild.Scaffolding</id>
-    <version>0.1.3</version>
+    <version>0.2.0</version>
     <authors>Michael Ayvazyan</authors>
     <owners>Michael Ayvazyan</owners>
-    <projectUrl>https://github.com/mayvazyan/MSBuild.Scaffolding#msbuildscaffolding</projectUrl>
+	<contributors>Bryan Johns</contributors>
+    <projectUrl>https://github.com/k4gdw/MSBuild.Scaffolding#msbuildscaffolding</projectUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>Adds basic MSBuild script and required infrastructure to your solution.</description>
-    <releaseNotes>Alpha version.</releaseNotes>
+    <releaseNotes>Added VB.Net support.</releaseNotes>
     <copyright>Copyright © 2012 Michael Ayvazyan</copyright>
     <tags>MSBuild, Scaffolding, Continous Integration, Continous Build, Automated Build</tags>
   </metadata>
